ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services-ingress
  namespace: tc3
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /GetContacts
          pathType: Prefix
          backend:
            service:
              name: get-contacts-service
              port:
                number: 80
        - path: /metrics/getcontacts
          pathType: Prefix
          backend:
            service:
              name: get-contacts-service
              port:
                number: 80
        - path: /classic
          pathType: Prefix
          backend:
            service:
              name: prometheus-service-management
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: rabbitmq-service-management
              port:
                number: 80
        - path: /login
          pathType: Prefix
          backend:
            service:
              name: grafana-service
              port:
                number: 80
        - path: /DeleteContacts
          pathType: Prefix
          backend:
            service:
              name: delete-contacts-service
              port:
                number: 80
        - path: /UpdateContacts
          pathType: Prefix
          backend:
            service:
              name: update-contacts-service
              port:
                number: 80
